quorum/test/tests/TypeChecker/Pass/ExpAssignBooleanNumber.quorum
boolean bool = cast(boolean, 7.5)