quorum/test/tests/TypeChecker/Fail/ExpAssignNumObjText.quorum
Number n = cast(Number, "5.0")